# graph-processing-engine

./: .gitignore  CMakeList.txt  README.md
src/algorithms/: algorithm_base.hpp  bfs.cpp  bfs.hpp  pagerank.cpp  pagerank.hpp
src/core/: edge.cpp  edge.hpp  graph.cpp  graph.hpp  types.hpp  vertex.cpp  vertex.hpp
src/io/: graph_loader.cpp  graph_loader.hpp
src/parallel/: cpu_engine.cpp  cpu_engine.hpp  gpu_engine.cu  gpu_engine.hpp
src/tests/: CMakeLists.txt  algorithm_test.cpp  graph_test.cpp
src/utils/: logger.cpp  logger.hpp  timer.cpp  timer.hpp
